# alembic-autoscan

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  SECURITY.md  debug_match.py  debug_pathlib.py  pyproject.toml  test_discovery.py
.github/: dependabot.yml
.github/workflows/: deploy.yml  security.yml
alembic_autoscan/: __init__.py  cache.py  cli.py  config.py  integration.py  scanner.py  utils.py
examples/complex_example/: README.md  alembic.ini  database.py
examples/complex_example/alembic/: env.py
examples/complex_example/alembic/versions/: 8066edf61d2a_initial_migration.py
examples/complex_example/models/: __init__.py  article.py  article_tablename.py  post.py  user.py
examples/configuration/: .alembic-autoscan.yaml  README.md  example-pyproject.toml  usage_example.py
examples/edge_cases/: database.py
examples/edge_cases/models/: __init__.py  abstract_and_mixins.py  dataclass_models.py  decorator_base.py  enums_and_types.py  imperative.py  modern_style.py  multiple_bases.py  naming_conventions.py  nested_models.py  polymorphism.py
examples/sample_project/: README.md  alembic.ini  database.py
examples/sample_project/alembic/: env.py
examples/sample_project/models/: __init__.py  article.py  article_tablename.py  post.py  user.py
tests/: test_cache.py  test_cli.py  test_complex.py  test_config.py  test_config_coverage.py  test_edge_cases.py  test_integration.py  test_large_scale.py  test_main.py  test_scanner.py  test_utils.py
