[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alembic-autoscan"
version = "1.0.0"
description = "Automatically discover and import SQLAlchemy models for Alembic migrations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "tonlls", email = "tonlls@users.noreply.github.com"}
]
keywords = ["alembic", "sqlalchemy", "migrations", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlalchemy>=1.4.0",
    "alembic>=1.7.0",
]

[project.scripts]
alembic-autoscan = "alembic_autoscan.cli:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tonlls/alembic-autoscan"
Repository = "https://github.com/tonlls/alembic-autoscan"
Issues = "https://github.com/tonlls/alembic-autoscan/issues"
Documentation = "https://github.com/tonlls/alembic-autoscan#readme"

[tool.hatch.build.targets.wheel]
packages = ["alembic_autoscan"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
